--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
 <head>
     <meta charset="utf-8">
     <meta name='viewport' content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0'>
-    <link rel="shortcut icon" href="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png" type="image/webp">
-    <link rel="icon" href="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png" type="image/webp">
+    <link rel="shortcut icon" href="profile picture icon.png" type="image/webp">
+    <link rel="icon" href="profile picture icon.png" type="image/webp">
     <meta name="description" content="It does not matter how slowly you go as long as you do not stop..."/>
     <meta property="og:title" content="Durjoy Das Joy"/>
     <link rel="canonical" href="https://durjoy.bio.link"/>
     <meta property="og:url" content="https://durjoy.bio.link"/>
     <meta property="og:description" content="It does not matter how slowly you go as long as you do not stop..."/>
-    <meta property="og:image:secure_url" content="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png"/>
-    <meta property="og:image" content="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png"/>
+    <meta property="og:image:secure_url" content="profile picture icon.png"/>
+    <meta property="og:image" content="profile picture icon.png"/>
     <meta property="profile:username" content="durjoy"/>
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Durjoy Das Joy"/>
-    <meta name="twitter:image" content="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png"/>
+    <meta name="twitter:image" content="profile picture icon.png"/>
     <meta name="twitter:url" content="https://durjoy.bio.link"/>
-    <link rel="preload" as="image" href="https://cdn.bio.link/uploads/profile_pictures/2023-02-25/ISIBUQiBuFY4Utxd5gUG0YDni9ExRjTp.png" />
+    <link rel="preload" as="image" href="profile picture icon.png" />
     <title>Durjoy Das Joy</title>
     <link rel="apple-touch-icon" sizes="180x180" href="https://bio.link/apple-touch-icon.png">
     <link rel="manifest" href="https://bio.link/manifest.json">
