--- a/index.html
+++ b/index.html
@@ -128,25 +128,25 @@
         <ul class="social-list">
 
           <li class="social-item">
-            <a href="https://www.facebook.com/durjoyofficialblog" class="social-link">
+            <a href="https://www.facebook.com/durjoyofficialblog" target="_blank" class="social-link">
               <ion-icon name="logo-facebook"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://twitter.com/itz_durjoy" class="social-link">
+            <a href="https://twitter.com/itz_durjoy" target="_blank" class="social-link">
               <ion-icon name="logo-twitter"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="https://www.instagram.com/_mr.durjoy" class="social-link">
+            <a href="https://www.instagram.com/_mr.durjoy" target="_blank" class="social-link">
               <ion-icon name="logo-instagram"></ion-icon>
             </a>
           </li>
 
           <li class="social-item">
-            <a href="hhttps://t.me/mr_durjoy" class="social-link">
+            <a href="https://t.me/mr_durjoy" target="_blank" class="social-link">
               <ion-icon name="logo-telegram"></ion-icon>
             </a>
           </li>
